k8s/hr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-app
  namespace: hr
  labels:
    app: hr-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hr-app
  template:
    metadata:
      labels:
        app: hr-app
    spec:
      containers:
        - name: hr-app
          image: 027354322246.dkr.ecr.eu-central-1.amazonaws.com/hr-app:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 30
