k8s/hr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-app
  namespace: hr
spec:
  type: ClusterIP
  selector:
    app: hr-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
